apps/base/media/plex/plex-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-external
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - name: pms
      port: 32400
      targetPort: 32400
      protocol: TCP
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
